--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,5 @@ sanic==0.7.0
 six==1.11.0               # via bcrypt, python-jose
 sqlalchemy==1.2.8
 ujson==1.35               # via sanic
-uvloop==0.9.1             # via sanic
+uvloop==0.11.0
 websockets==4.0.1         # via sanic
